--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>My current favorite song is <a href="https://www.youtube.com/watch?v=7adDm9YACpE" target="_blank">funds</a></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
